Fixing tv player on mobile

--- a/modules/widgets/tv/player/player.scss
+++ b/modules/widgets/tv/player/player.scss
@@ -126,6 +126,7 @@ $module: '.widget-tv.player';
 
       .meta {
         padding-left: 0;
+        margin-top: 10px;
       }
     }
 
